--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@openimis/fe-language_fr",
-  "version": "1.2.1",
+  "name": "openimis-fe-language_fr_ne",
+  "version": "1.3.0",
   "license": "AGPL-3.0-only",
-  "description": "openIMIS French translations of reference modules",
-  "repository": "openimis/openimis-fe-language_fr_js",
+  "description": "openIMIS French translations of reference modules in Niger",
+  "repository": "BLQS/openimis-fe-language_fr_ne_js",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "engines": {
