--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@blsqne/fe-language_fr_ne",
+  "name": "@openimis/fe-language_fr",
   "version": "1.3.0",
   "license": "AGPL-3.0-only",
   "description": "openIMIS French translations of reference modules in Niger",
