--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-api-middleware": "^3.2.1",
-    "rollup": "^2.10.0"
+    "rollup": "^2.10.0",
+    "flat": "^6.0.1"
   },
   "files": [
     "dist"
